@@ -717,6 +717,16 @@ data:extend({
     place_result = "pm-proximity-beacon",
     stack_size = 50
   },
+  {
+    type = "item",
+    name = "pm-electric-boiler-1",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/buildings/dirty-boiler.png",
+    subgroup = "energy",
+    order = "b[steam-power]-a[boiler]",
+    place_result = "pm-electric-boiler-1",
+    stack_size = 20
+  },
 })
 
 data.raw["item"]["oil-refinery"].subgroup = "pm-oil-machine"
